funding landing page

--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,288 @@
-.App {
-  text-align: center;
+html {
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.section1 {
+  padding: 8rem 8rem;
+  color: #ffffff;
+  justify-content: center;
+  align-items: center;
+  background-color: #302e29;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.section1 .section1-left {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.section1 .sub-text {
+  font-family: Montserrat;
+  font-size: 19px;
+  font-weight: 100;
+  line-height: 25px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+.section1 .heading {
+  font-family: Montserrat;
+  font-size: 48px;
+  font-weight: 500;
+  line-height: 63px;
+  letter-spacing: 0em;
+  text-align: left;
 }
 
-.App-link {
-  color: #61dafb;
+.section1 .special-text {
+  color: #eea91f;
+  font-size: 64px;
+  font-weight: 500;
+  line-height: 84.54px;
 }
 
-@keyframes App-logo-spin {
+.section1 .section1-buttons {
+  display: flex;
+  gap: 4rem;
+  justify-content: space-between;
+}
+
+.section1 .image-wrapper {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  padding-right: 3rem;
+}
+
+.section2 {
+  background-color: #fffaf0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.section2 .heading {
+  font-family: Montserrat;
+  font-size: 48px;
+  font-weight: bold;
+  line-height: 63px;
+  letter-spacing: 0em;
+  text-align: center;
+  margin: 0;
+  padding: 5rem;
+}
+.section2 .sub-heading {
+  max-width: 85%;
+  font-family: Montserrat;
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 42px;
+  letter-spacing: 0em;
+  margin-left: 2rem;
+  margin-top: 10rem;
+  text-align: left;
+}
+.section2 .caption {
+  color: rgba(48, 46, 41, 0.7);
+
+  max-width: 85%;
+  font-family: Montserrat;
+  font-size: 24px;
+  font-weight: lighter;
+  line-height: 32px;
+  letter-spacing: 0em;
+  text-align: left;
+  margin-left: 2rem;
+  margin-top: 1rem;
+}
+.section3 {
+  background-color: #fffaf0;
+  display: flex;
+  flex-direction: column;
+  padding: 3rem;
+}
+.section4 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #fffaf0;
+  padding-top: 3rem;
+}
+.section4 .section4-left .section4-left-heading {
+  font-size: 2rem;
+  margin-bottom: 2.5rem;
+  font-weight: bold;
+}
+.section4 .section4-right img {
+  margin-top: 1rem;
+  width: 500px;
+}
+.section5 {
+  background-color: #fffaf0;
+  padding: 8rem 1rem;
+}
+.section5 .cxo-card {
+  width: 70%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-evenly;
+  gap: 12rem;
+  padding: 2rem 8rem 0 15rem;
+  margin-top: 5rem;
+}
+
+.footer {
+  background: rgba(48, 46, 41, 1);
+
+  padding: 2rem 5rem;
+}
+
+@media (max-width: 768px) {
+  /* Your mobile-specific styles go here */
+  body {
+    font-size: 12px; /* Example: Adjust font size for better readability on mobile */
+  }
+  .section1 {
+    padding: 1rem;
+    background-color: #302e29;
+  }
+  .section1 .heading {
+    font-family: Montserrat;
+    font-size: 28px;
+    font-weight: 500;
+    line-height: 63px;
+    letter-spacing: 0em;
+    text-align: left;
+  }
+  .section1 .section1-buttons {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    padding: 0;
+  }
+  .section1 .image-wrapper {
+    justify-content: center;
+    padding: 0;
+  }
+  .section1 img {
+    width: 70%;
+  }
+
+  .section1 .section1-left {
+    order: 1;
+  }
+  .section1 .sub-text {
+    font-family: Montserrat;
+    font-size: 16px;
+    font-weight: 100;
+    line-height: 25px;
+    letter-spacing: 0em;
+    text-align: left;
+  }
+  .section1 .heading {
+    font-family: Montserrat;
+    font-size: 22px;
+    font-weight: 500;
+    line-height: 63px;
+    letter-spacing: 0em;
+    text-align: left;
+  }
+  .section1 .special-text {
+    color: #eea91f;
+    font-size: 44px;
+    font-weight: 500;
+  }
+
+  .section2 .heading {
+    font-family: Montserrat;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 25px;
+    letter-spacing: 0em;
+    text-align: center;
+    margin: 0;
+    padding: 3rem;
+  }
+
+  .section4 .section4-right img {
+    margin-top: 1rem;
+    width: 280px;
+  }
+
+  .section2 .sub-heading {
+    text-align: center;
+    max-width: 100%;
+    font-size: 20px;
+    line-height: 28px;
+    margin-left: 0;
+    margin-top: 5rem;
+  }
+  .section2 .caption {
+    color: rgba(48, 46, 41, 0.7);
+    max-width: 100%;
+    font-family: Montserrat;
+    font-size: 14px;
+    font-weight: lighter;
+    line-height: 22px;
+    margin-left: 1rem;
+    text-align: center;
+    margin-top: 1rem;
+  }
+  .section3 {
+    padding: 0;
+  }
+  .section4 .section4-left .section4-left-heading {
+    text-align: center;
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+    font-weight: bold;
+  }
+  .section4 .section4-left .section4-left-subheading {
+    text-align: center;
+    font-size: 1rem;
+    margin-bottom: 1.5rem;
+  }
+  .section4 .section4-left {
+    display: flex;
+    flex-direction: column;
+  }
+  .section5 {
+    padding: 2rem 0.5rem;
+  }
+  .section5 .cxo-card {
+    width: 70%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-evenly;
+    gap: 12rem;
+    padding: 0 8rem 0 15rem;
+    margin-top: 0;
+  }
+  .footer {
+    background: rgba(48, 46, 41, 1);
+  
+    padding: 2rem 2rem;
+  }
+
+  /* Add more mobile-specific styles as needed */
+}
+
+/* 
+.logo {
+  height: 6em;
+  padding: 1.5em;
+  will-change: filter;
+  transition: filter 300ms;
+}
+.logo:hover 
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+.logo.react:hover {
+  filter: drop-shadow(0 0 2em #61dafbaa);
+}
+
+@keyframes logo-spin {
   from {
     transform: rotate(0deg);
   }
@@ -36,3 +290,17 @@
     transform: rotate(360deg);
   }
 }
+
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
+  }
+}
+
+.card {
+  padding: 2em;
+}
+
+.read-the-docs {
+  color: #888;
+} */
