--- a/src/components/carousel-slick/slickCarousel.css
+++ b/src/components/carousel-slick/slickCarousel.css
@@ -1,20 +1,29 @@
 .slick-arrow {
-  width: 37px !important; /* Set the width */
-  height: 50px !important; /* Set the height */
   display: flex;
+  width: 48px;
+  height: 48px;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: 100px; /* Set the font size */
-  color: white; /* Set the text color */
-  border-radius: 10px; /* Add some border-radius for rounded corners */
+  background-color: blueviolet;
+  gap: 8px;
+  flex-shrink: 0;
 }
-.slick-arrow::before {
-  font-size: 38px !important;
-  color: black !important;
-}
+
 .slick-slider .slick-list .slick-track {
   display: flex !important;
   gap: 125px !important;
   padding-top: 2rem;
   align-items: center;
+}
+
+.slick-slider .slick-prev {
+  background-color: #f5f5f6 !important;
+  top: -20%;
+  left: 80%;
+}
+.slick-slider .slick-next {
+  background-color: #f5f5f6 !important;
+  top: -20%;
+  left: 90%;
 }
