--- a/src/components/cards/card.css
+++ b/src/components/cards/card.css
@@ -1,5 +1,9 @@
+.bold-text {
+  font-weight: 900;
+}
 .card-wrapper {
   display: flex;
+  height: 520px;
   flex-direction: column;
   padding: 2rem;
   margin: 0 auto;
@@ -10,6 +14,7 @@
 
   /* box-shadow: -1px 4px 14px 0px rgba(0, 0, 0, 0.05) inset; */
 }
+
 .card-wrapper .card-upper .card-upper-1 {
   display: flex;
   align-items: center;
@@ -22,6 +27,13 @@
 }
 .card-lower_right {
   font-size: 15px;
+}
+.add-on {
+  margin: 0.5rem;
+  font-size: 18px;
+}
+.add-on-bold {
+  font-weight: bold;
 }
 .card-wrapper .card-upper .card-upper-1 .card-upper-1_box {
   display: flex;
@@ -36,6 +48,8 @@
   margin-top: 0.5rem;
 }
 .subcard-wrapper {
+  width: 240px;
+  height: 270px;
   display: flex;
   flex-direction: column;
   padding: 1.5rem;
@@ -84,7 +98,7 @@
   border-radius: 15px;
   color: #ffffff;
   padding: 10px 20px;
-  width: 70%;
+  /* width: 70%; */
   margin: 1.5rem auto 0 auto;
 }
 .card-wrapper .sub-button:hover {
@@ -102,11 +116,12 @@
 }
 
 .cxoCard-wrapper {
+  padding: 1rem 0;
   display: flex;
   align-items: center;
   position: relative;
-  min-width: 520px;
-  min-height: 320px;
+  min-width: 350px;
+  min-height: 200px;
   border-radius: 15px;
   background: linear-gradient(
     112.58deg,
@@ -122,8 +137,8 @@
   top: -60px;
   left: -20%;
   width: 280px;
-  height: 240px;
-  border-radius: 15px;
+  height: 150px;
+  border-radius: 100px;
   object-fit: cover;
   background-size: cover;
   background-position: center;
@@ -140,12 +155,14 @@
 }
 .cxoCard-wrapper .cxoCard-content .cxoCard-content-subheading {
   color: #fefeee;
-  padding: 1.5rem 0;
+  padding: 0.5rem 0;
 }
 .cxoCard-wrapper .cxoCard-content .button {
-  font-size: large;
+  font-size: smaller;
   font-weight: bold;
   margin-top: 1.5rem;
+  margin-right: auto;
+  margin-left: auto;
   border-radius: 15px;
   border: 3px solid #ffffff;
   color: #ffffff;
@@ -155,19 +172,30 @@
 @media (max-width: 768px) {
   .card-wrapper {
     margin-bottom: 3rem;
+    height: auto;
+  }
+  .card-wrapper .card-lower_right {
+    font-size: 15px;
   }
   .subcard-wrapper {
     margin-bottom: 2rem;
   }
-
+  .add-on {
+    margin: 0.8rem 0;
+    font-size: 15px;
+  }
+  .add-on-bold {
+    font-weight: bold;
+  }
   .cxoCard-wrapper {
+    width: 28px;
     padding: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
     position: relative;
-    min-width: 300px;
-    min-height: 70px;
+    min-width: 208px;
+    min-height: 23px;
     border-radius: 15px;
     background: linear-gradient(
       112.58deg,
@@ -180,11 +208,11 @@
 
   .cxoCard-wrapper .cxoCard-image {
     position: relative;
-    top: -60px;
+    top: -40px;
     left: -20%;
-    width: 337px;
-    height: 150px;
-    border-radius: 15px;
+    width: 150px;
+    height: 90px;
+    border-radius: 100px;
     object-fit: cover;
     background-size: cover;
     background-position: center;
@@ -198,11 +226,12 @@
   }
   .cxoCard-wrapper .cxoCard-content .cxoCard-content-heading {
     font-weight: bold;
-    font-size: 1.4rem !important;
+    font-size: 1.2rem !important;
   }
   .cxoCard-wrapper .cxoCard-content .cxoCard-content-subheading {
     color: #fefeee;
-    padding: 1rem 0;
+    padding: 0.5rem 0;
+    font-size: 0.6rem;
   }
   .cxoCard-wrapper .cxoCard-content .button {
     font-size: 10px;
