--- a/src/components/cards/card.css
+++ b/src/components/cards/card.css
@@ -48,14 +48,13 @@
   margin-top: 0.5rem;
 }
 .subcard-wrapper {
-  width: 242px;
+  width: 80%;
   height: 270px;
   display: flex;
   flex-direction: column;
   padding: 1.5rem;
   margin: 0 auto;
   border-radius: 12px;
-  background: #fefffe;
   border: 0.5px solid rgba(0, 0, 0, 0.04);
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.15);
   border-radius: 8px;
@@ -88,8 +87,7 @@
 
 .subcard-wrapper .card-lower {
   display: flex;
-  align-items: center;
-  gap: 1rem;
+  gap: 0.5rem;
   margin-top: 0.5rem;
 }
 
@@ -120,15 +118,10 @@
   display: flex;
   align-items: center;
   position: relative;
-  min-width: 350px;
-  min-height: 200px;
+  /* min-width: 350px;
+  min-height: 200px; */
   border-radius: 15px;
-  background: linear-gradient(
-    112.58deg,
-    #285c73 0.47%,
-    #387996 47.13%,
-    #285c73 100%
-  );
+  background: #302e29;
   margin-top: 8 rem;
 }
 
@@ -163,9 +156,11 @@
   margin-top: 1.5rem;
   margin-right: auto;
   margin-left: auto;
-  border-radius: 15px;
-  border: 3px solid #ffffff;
-  color: #ffffff;
+  border-radius: 8.271px;
+  background: var(--Primary, #eea91f);
+  box-shadow: 1.96168px 18.63597px 30.40606px 0px rgba(0, 0, 0, 0.07),
+    -1.47126px -1.96168px 3.43294px 0px rgba(255, 255, 255, 0.15) inset;
+  color: #050505;
   padding: 10px 20px;
 }
 
@@ -197,12 +192,6 @@
     min-width: 208px;
     min-height: 23px;
     border-radius: 15px;
-    background: linear-gradient(
-      112.58deg,
-      #285c73 0.47%,
-      #387996 47.13%,
-      #285c73 100%
-    );
     margin-top: 8 rem;
   }
 
@@ -221,7 +210,6 @@
     border-radius: 15px;
   }
   .cxoCard-wrapper .cxoCard-content {
-    color: #ffffff;
     margin-left: -35px;
   }
   .cxoCard-wrapper .cxoCard-content .cxoCard-content-heading {
@@ -238,8 +226,86 @@
     font-weight: bold;
     margin-top: 0;
     border-radius: 15px;
-    border: 3px solid #ffffff;
-    color: #ffffff;
+    padding: 10px 20px;
+  }
+}
+
+@media (max-width: 1300px) {
+  .card-wrapper {
+    margin-bottom: 1rem;
+    height: auto;
+  }
+  .card-wrapper .card-lower_right {
+    font-size: 15px;
+  }
+  .subcard-wrapper {
+    margin-bottom: 2rem;
+  }
+  .add-on {
+    margin: 0.8rem 0;
+    font-size: 15px;
+  }
+  .add-on-bold {
+    font-weight: bold;
+  }
+  .subcard-wrapper {
+    width: 80%;
+    height: 270px;
+    display: flex;
+    flex-direction: column;
+    padding: 1.5rem;
+    margin: 0 auto;
+    border-radius: 12px;
+    border: 0.5px solid rgba(0, 0, 0, 0.04);
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.15);
+    border-radius: 8px;
+    border: 2px solid var(--Primary, #eea91f);
+  }
+  .cxoCard-wrapper {
+    /* width: 28px; */
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+
+    /* min-width: 208px;
+    min-height: 23px; */
+    border-radius: 15px;
+    margin-top: 8 rem;
+  }
+
+  .cxoCard-wrapper .cxoCard-image {
+    position: relative;
+    top: -40px;
+    left: -20%;
+    width: 150px;
+    height: 90px;
+    border-radius: 100px;
+    object-fit: cover;
+    background-size: cover;
+    background-position: center;
+  }
+  .cxoCard-wrapper .cxoCard-image img {
+    border-radius: 15px;
+  }
+  .cxoCard-wrapper .cxoCard-content {
+    margin-left: -35px;
+  }
+  .cxoCard-wrapper .cxoCard-content .cxoCard-content-heading {
+    font-weight: bold;
+    font-size: 1.2rem !important;
+  }
+  .cxoCard-wrapper .cxoCard-content .cxoCard-content-subheading {
+    color: #fefeee;
+    padding: 0.5rem 0;
+    font-size: 0.8rem;
+  }
+  .cxoCard-wrapper .cxoCard-content .button {
+    font-size: 10px;
+    font-weight: bold;
+    margin-top: 0;
+    border-radius: 15px;
     padding: 10px 20px;
   }
 }
