--- a/src/components/carousel-slick/slickCarousel.css
+++ b/src/components/carousel-slick/slickCarousel.css
@@ -16,20 +16,24 @@
   padding: 2rem 0px;
   align-items: center;
 }
-
 .slick-slider .slick-prev {
-  display: none !important;
-  background-color: #f5f5f6 !important;
-  top: -20%;
-  left: 80%;
+  z-index: 1000;
+  color: #eea81e !important;
+  background-color: #302e29 !important;
+  left: -4%;
 }
 .slick-slider .slick-next {
-  display: none !important;
-  background-color: #f5f5f6 !important;
-  top: -20%;
-  left: 90%;
+  z-index: 1000;
+  color: #eea81e !important;
+  background-color: #302e29 !important;
+  right: -4.4%;
 }
 
+@media (max-width: 1400px) {
+  .slick-slider .slick-list .slick-track {
+    gap: 67px !important;
+  }
+}
 @media (max-width: 768px) {
   .slick-dots {
     padding: 3.5rem 0 !important;
@@ -37,5 +41,18 @@
   .slick-slider .slick-list .slick-track {
     margin-bottom: 2rem;
     padding: 4rem 0px;
+  }
+  .slick-track {
+    width: 2310px !important;
+  }
+  .slick-slider .slick-prev {
+    color: #eea81e !important;
+    background-color: #302e29 !important;
+    left: 0;
+  }
+  .slick-slider .slick-next {
+    color: #eea81e !important;
+    background-color: #302e29 !important;
+    right: 0;
   }
 }
