--- a/src/components/crousel/crousel.css
+++ b/src/components/crousel/crousel.css
@@ -26,7 +26,7 @@
   box-shadow: inset 0 0 1px 0px rgb(252, 255, 94) !important;
 }
 
-.rec-arrow {
+.rec-dot {
   display: none !important;
 }
 .carousel-wrapper button {
