--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -16,6 +16,11 @@
 .section1 .image-wrapper {
   margin-bottom: 20px;
 }
+.section1 .image-avatar {
+  position: relative;
+  top: 0%;
+  right: 13%;
+}
 .section1 .sub-text {
   padding-right: 5rem;
   font-family: Montserrat;
@@ -86,7 +91,7 @@
 
   max-width: 70%;
   font-family: Montserrat;
-  font-size: 18px;
+  font-size: 24px;
   font-weight: lighter;
   line-height: 32px;
   letter-spacing: 0em;
@@ -97,7 +102,6 @@
 .section3 .section-3-top {
   display: flex;
   justify-content: center;
-  align-items: center;
 }
 .section2 .heading-special {
   font-weight: bold;
@@ -114,6 +118,7 @@
   margin: 3rem 0;
 }
 .subCard-button {
+  font-weight: 600;
   cursor: pointer;
   font-size: 1.2rem;
   border: 0;
@@ -129,6 +134,7 @@
 
 .subCard-buttonOutlined {
   cursor: pointer;
+  font-weight: 600;
   font-size: 1.2rem;
   background: transparent;
   display: inline-flex;
@@ -166,6 +172,7 @@
   align-items: center;
   background-color: #fffaf0;
   padding-top: 3rem;
+  padding-bottom: 6rem;
 }
 .section4 .section4-left .section4-left-heading {
   font-size: 2rem;
@@ -187,6 +194,9 @@
 }
 .section5 {
   background-color: #fffaf0;
+}
+.section5 .caption {
+  font-size: 24px;
 }
 .section5 .cxo-card {
   display: flex;
@@ -215,7 +225,7 @@
 .section6 .sub-text {
   color: #302e29;
   font-family: Montserrat;
-  font-size: 18px;
+  font-size: 24px;
   font-style: normal;
   font-weight: 400;
   margin-bottom: 3rem;
@@ -233,7 +243,7 @@
   padding: 2rem 5rem;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1000px) {
   /* Your mobile-specific styles go here */
   body {
     font-size: 16px; /* Example: Adjust font size for better readability on mobile */
@@ -249,6 +259,10 @@
     align-items: center;
     gap: 1rem;
     padding-bottom: 25px;
+  }
+  .section1 .image-avatar {
+    width: 150px;
+    right: -25%;
   }
   .section1 .image-wrapper {
     justify-content: center;
@@ -297,7 +311,7 @@
     padding: 3rem;
   }
   .subCard-button {
-    font-size: 1rem;
+    font-size: 0.9rem;
   }
 
   .subCard-button-wrapper {
@@ -306,6 +320,10 @@
   .subCard-buttonOutlined {
     font-size: 1rem;
     padding: 10.734px 10.141px;
+  }
+  .section4 {
+    padding-top: 0;
+    padding-bottom: 1rem;
   }
 
   .section4 .section4-right img {
@@ -316,10 +334,15 @@
   .section3 .sub-heading {
     text-align: center;
     max-width: 100%;
-    font-size: 20px;
+    font-size: 24px;
     line-height: 28px;
     margin-left: 0;
     margin-top: 1rem;
+  }
+  .section3-subButton {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .section3 .caption {
     color: rgba(48, 46, 41, 0.7);
@@ -358,6 +381,9 @@
   .section5 {
     padding: 2rem 0.5rem 1px 0.5rem;
   }
+  .section5 .caption {
+    font-size: 16px;
+  }
   .section5 .cxo-card {
     width: 70%;
     margin: 0 auto;
@@ -375,7 +401,7 @@
     font-size: 30px;
   }
   .section6 .sub-text {
-    font-size: 16px;
+    font-size: 24px;
     margin-bottom: 0px;
     text-align: center;
   }
