--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -163,7 +163,7 @@
   background-color: #fffaf0;
   display: flex;
   flex-direction: column;
-  padding: 3rem;
+  padding: 3rem 5rem;
 }
 .section4 {
   display: flex;
