--- a/src/components/cards/card.css
+++ b/src/components/cards/card.css
@@ -2,10 +2,11 @@
   font-weight: 900;
 }
 .card-wrapper {
-  display: flex;
-  height: 560px;
-  flex-direction: column;
-  padding: 2rem;
+  flex: 1;
+  width: 340px;
+  height: auto;
+  align-self: normal;
+  flex-wrap: wrap;
   margin: 0 auto;
   border-radius: 12px;
   background: #fefffe;
@@ -13,6 +14,9 @@
   box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.15);
 
   /* box-shadow: -1px 4px 14px 0px rgba(0, 0, 0, 0.05) inset; */
+}
+.card-wrapper .card {
+  padding: 2rem;
 }
 
 .card-wrapper .card-upper .card-upper-1 {
@@ -127,10 +131,10 @@
 
 .cxoCard-wrapper .cxoCard-image {
   position: relative;
-  top: -60px;
+  top: -40px;
   left: -20%;
   width: 280px;
-  height: 150px;
+  height: 175px;
   border-radius: 100px;
   object-fit: cover;
   background-size: cover;
@@ -168,9 +172,15 @@
   .card-wrapper {
     margin-bottom: 3rem;
     height: auto;
+    display: flex;
+    flex-wrap: wrap;
+  }
+  .card-wrapper .card {
+    flex: 1;
+    padding: 1.5rem;
   }
   .card-wrapper .card-lower_right {
-    font-size: 15px;
+    font-size: 14px;
   }
   .subcard-wrapper {
     margin-bottom: 2rem;
@@ -233,10 +243,9 @@
 @media (max-width: 1300px) {
   .card-wrapper {
     margin-bottom: 1rem;
-    height: auto;
   }
   .card-wrapper .card-lower_right {
-    font-size: 15px;
+    font-size: 14px;
   }
   .subcard-wrapper {
     margin-bottom: 2rem;
