--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -33,7 +33,7 @@
 .section1 .heading {
   font-family: Montserrat;
   font-style: normal;
-  font-size: 64px;
+  font-size: 62px;
   font-weight: 500;
   line-height: 68px;
   letter-spacing: 0em;
@@ -42,7 +42,6 @@
 
 .section1 .special-text {
   color: #eea91f;
-  font-size: 64px;
   font-weight: bolder;
   line-height: 84.54px;
 }
@@ -66,16 +65,20 @@
   justify-content: center;
   align-items: center;
 }
-
+.section2 .card-container {
+  display: flex;
+  gap: 20px;
+}
 .section2 .heading {
   font-family: Montserrat;
   font-size: 48px;
-  line-height: 63px;
+  line-height: 74px;
   letter-spacing: 0em;
   text-align: center;
   margin: 0;
   padding: 5rem;
 }
+
 .section3 .sub-heading {
   max-width: 85%;
   font-family: Montserrat;
@@ -242,7 +245,14 @@
 
   padding: 2rem 5rem;
 }
-
+@media (max-width: 1300px) {
+  .section1 .heading {
+    font-size: 50px;
+  }
+  .section2 .heading {
+    font-size: 42px;
+  }
+}
 @media (max-width: 1000px) {
   /* Your mobile-specific styles go here */
   body {
@@ -287,15 +297,14 @@
   }
   .section1 .heading {
     font-family: Montserrat;
-    font-size: 32px;
+    font-size: 40px;
     font-weight: 500;
-    line-height: 1px;
+    line-height: 20px;
     letter-spacing: 0em;
     text-align: center;
   }
   .section1 .special-text {
     color: #eea91f;
-    font-size: 32px;
     font-weight: 500;
     line-height: 80px;
   }
@@ -309,6 +318,11 @@
     text-align: center;
     margin: 0;
     padding: 3rem;
+  }
+  .section2 .card-container {
+    display: flex;
+    gap: 20px;
+    flex-direction: column;
   }
   .subCard-button {
     font-size: 0.9rem;
@@ -334,7 +348,7 @@
   .section3 .sub-heading {
     text-align: center;
     max-width: 100%;
-    font-size: 24px;
+    font-size: 25px;
     line-height: 28px;
     margin-left: 0;
     margin-top: 1rem;
@@ -385,12 +399,10 @@
     font-size: 16px;
   }
   .section5 .cxo-card {
-    width: 70%;
-    margin: 0 auto;
-    display: flex;
-    justify-content: space-evenly;
-    gap: 12rem;
-    padding: 0 8rem 0 15rem;
+    width: 100%;
+    margin: 0 0;
+    display: block;
+    padding: 0;
     margin-top: 0;
   }
   .section6 {
