--- a/src/pages/pages.css
+++ b/src/pages/pages.css
@@ -74,6 +74,8 @@
   gap: 20px;
   justify-content: space-between;
   align-items: center;
+  width: 90%;
+  margin: 0 auto;
 }
 .section2 .heading {
   font-family: Montserrat;
